--- a/.github/workflows/trw.yml
+++ b/.github/workflows/trw.yml
@@ -42,7 +42,7 @@ jobs:
         uses: laurentsimon/slsa-delegator/actions/setup-token@main
         with:
           slsa-workflow-recipient: "delegator_generic_slsa3.yml"
-          slsa-private-repository: true
+          slsa-private-repository: ${{ inputs.private-repository }}
           slsa-runner-label: "ubuntu-latest"
           slsa-build-action-path: "AdamKorcz/test-workflow/.github/workflows/test.yml@main"
           slsa-workflow-inputs: ${{ toJson(inputs) }}
