--- a/.github/workflows/pw.yml
+++ b/.github/workflows/pw.yml
@@ -3,14 +3,31 @@ name: Demo
 on:
   - pull_request
 jobs:
-  demo2:
+  demo1:
     runs-on: ubuntu-latest
     steps:
-    - name: print something2
-      run: echo "someting22"
-  usetrw:
-    uses: ./.github/workflows/trw.yml
-    with:
-      name1: value1
-      name2: value2
-      private-repository: true
+      - id: setup
+        uses: slsa-framework/slsa-github-generator/actions/setup-token@main
+        with:
+          slsa-workflow-recipient: "delegator_generic_slsa3.yml"
+          slsa-private-repository: true
+          slsa-runner-label: "ubuntu-latest"
+          slsa-build-action-path: "./actions/build-artifacts-composite"
+          slsa-workflow-inputs: '{"name1":"value1","name2":"value2","private-repository":true}'
+      - id: verify
+        uses: slsa-framework/slsa-github-generator/.github/actions/verify-token@main
+        with:
+          slsa-unverified-token: ${{ steps.setup.outputs.slsa-token }}
+          slsa-workflow-recipient: "delegator_generic_slsa3.yml"
+          output-predicate: predicate.json
+#  demo2:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - name: print something2
+#      run: echo "someting22"
+#  usetrw:
+#    uses: ./.github/workflows/trw.yml
+#    with:
+#      name1: value1
+#      name2: value2
+#      private-repository: true
