--- a/.github/workflows/pw.yml
+++ b/.github/workflows/pw.yml
@@ -1,7 +1,7 @@
 ---
 name: Demo
 on:
-  - pull_request
+  - workflow_dispatch
 env:
   GH_TOKEN: ${{ github.token }}
   ISSUE_REPOSITORY: ${{ github.repository }}
