--- a/.github/workflows/pw.yml
+++ b/.github/workflows/pw.yml
@@ -2,11 +2,17 @@
 name: Demo
 on:
   - workflow_dispatch
+
+permissions: read-all
+
 env:
   GH_TOKEN: ${{ github.token }}
   ISSUE_REPOSITORY: ${{ github.repository }}
 jobs:
-  demo1:
+  test-verify-token:
+    permissions:
+      contents: read
+      id-token: write
     runs-on: ubuntu-latest
     steps:    
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
