--- a/builder/action.yml
+++ b/builder/action.yml
@@ -4,6 +4,12 @@ on:
 runs:
   using: 'composite'
   steps:
+    - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
     - name: 'test'
       shell: bash
       env:
