--- a/builder/action.yml
+++ b/builder/action.yml
@@ -20,8 +20,9 @@ runs:
       shell: bash
       run: mvn package -Pslsa
     - name: Set up Go
-      shell: bash
       uses: actions/setup-go@v3
       with:
         go-version: '1.20.0'
-    - run: go version
+    - name: 'Test go'
+      shell: bash
+      run: go version
