--- a/builder/action.yml
+++ b/builder/action.yml
@@ -18,7 +18,7 @@ runs:
         echo "Running the builder"
     - name: Build with Maven
       shell: bash
-      run: mvn package -Pslsa
+      run: mvn package
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
