--- a/action.yml
+++ b/action.yml
@@ -29,3 +29,8 @@ runs:
     - name: 'test'
       shell: bash
       run: mvn package
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: artifact-to-attest-to
+        path: target/test-project-0.1.0.jar
