--- a/action.yml
+++ b/action.yml
@@ -32,5 +32,5 @@ runs:
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: artifact-to-attest-to
+        name: test-project-0.1.0.jar
         path: target/test-project-0.1.0.jar
