--- a/builder/action.yml
+++ b/builder/action.yml
@@ -82,12 +82,11 @@ runs:
     #  run: |
     #    echo done!
     #    echo "hello, world" > result.txt
-    - name: Upload result
-      id: upload
-      uses: actions/upload-artifact@83fd05a356d7e2593de66fc9913b3002723633cb # tag=v3.1.1
+    - name: Download Artifact
+      id: download-artifact
+      uses: actions/download-artifact@v1
       with:
-        name: "test-project-0.1.0.jar"
-        path: "target/test-project-0.1.0.jar"
+        name: test-project-0.1.0.jar
 
     - name: "run"
       id: generate-outputs
@@ -95,7 +94,7 @@ runs:
         SLSA_OUTPUTS_ARTIFACTS_FILE: ${{ inputs.slsa-layout-file }}
       shell: bash
       run: |
-        hash=$(sha256sum target/test-project-0.1.0.jar | awk '{print $1}')
+        hash=$(sha256sum test-project-0.1.0.jar | awk '{print $1}')
         echo 
         echo "SLSA_OUTPUTS_ARTIFACTS_FILE: $SLSA_OUTPUTS_ARTIFACTS_FILE"
         cat <<EOF >DATA
