--- a/action.yml
+++ b/action.yml
@@ -33,4 +33,4 @@ runs:
       uses: actions/upload-artifact@v3
       with:
         name: test-project-0.1.0.jar
-        path: target/test-project-0.1.0.jar
+        path: target/gs-maven-0.1.0.jar
