--- a/builder/action.yml
+++ b/builder/action.yml
@@ -88,6 +88,7 @@ runs:
       with:
         name: test-project-0.1.0.jar
     - name: Display structure of downloaded files
+      shell: bash
       run: ls -R
 
     - name: "run"
