--- a/builder/action.yml
+++ b/builder/action.yml
@@ -97,7 +97,7 @@ runs:
         SLSA_OUTPUTS_ARTIFACTS_FILE: ${{ inputs.slsa-layout-file }}
       shell: bash
       run: |
-        hash=$(sha256sum test-project-0.1.0.jar | awk '{print $1}')
+        hash=$(sha256sum ./target/gs-maven-0.1.0.jar | awk '{print $1}')
         echo 
         echo "SLSA_OUTPUTS_ARTIFACTS_FILE: $SLSA_OUTPUTS_ARTIFACTS_FILE"
         cat <<EOF >DATA
