--- a/.github/workflows/trw.yml
+++ b/.github/workflows/trw.yml
@@ -61,3 +61,26 @@ jobs:
     secrets:
       secret1: ${{ secrets.secret1 }}
       secret2: ${{ secrets.secret2 }}
+  slsa-publish:
+    needs: [slsa-run]
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write # For asset uploads. Optional
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download attestations
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ needs.slsa-run.outputs.attestations-download-name }}
+
+      - name: Verify attestations
+        env:
+          SLSA_ATTESTATION_DOWNLOAD_NAME: ${{ needs.slsa-run.outputs.attestations-download-name }}
+        run: |
+          echo "download from $SLSA_ATTESTATION_DOWNLOAD_NAME"
+          # TODO: Verify thru slsa-verifier
+      - name: Upload the provenance
+        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v0.1.15
+        with:
+          files: |
+            *.sigstore
