--- a/builder/action.yml
+++ b/builder/action.yml
@@ -36,13 +36,14 @@ runs:
 
     # This would call the main Action, e.g., ./../__TOOL_CHECKOUT_DIR__/<path/to/action>
     # if path is left empty, the Action's action.yml is located at the root of the repository.
-    - name: Run main action
-      uses: ./../__TOOL_CHECKOUT_DIR__
+    - name: Run mvn package
+      shell: bash
+      run: mvn package # && ls -la target
+    - name: Upload built artifacts from mvn package
+      uses: actions/upload-artifact@v3
       with:
-        name1: ${{ fromJson(inputs.slsa-workflow-inputs).name1 }}
-        name2: ${{ fromJson(inputs.slsa-workflow-inputs).name2 }}
-        password: ${{ inputs.slsa-workflow-secret1 }}
-        pat-token: ${{ inputs.slsa-workflow-secret2 }}
+        name: test-project-0.1.0.jar
+        path: target/gs-maven-0.1.0.jar
 
     # Here we would possibly run jreleaser
     
