--- a/.github/workflows/trw.yml
+++ b/.github/workflows/trw.yml
@@ -58,6 +58,7 @@ jobs:
     uses: slsa-framework/slsa-github-generator/.github/workflows/delegator_generic_slsa3.yml@main
     with:
       slsa-token: ${{ needs.slsa-setup.outputs.slsa-token }}
+      continue-on-error: true
     #secrets:
     #  secret1: ${{ secrets.secret1 }}
     #  secret2: ${{ secrets.secret2 }}
