--- a/.github/workflows/create-slsa-file.yml
+++ b/.github/workflows/create-slsa-file.yml
@@ -1,17 +1,14 @@
-name: Our builder
 on:
   workflow_call:
-runs:
-  using: 'composite'
-  steps:
+jobs:
+  Create SLSA file:
+    runs-on: ubuntu-latest
+    steps:
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-
-    # This would call the main Action, e.g., ./../__TOOL_CHECKOUT_DIR__/<path/to/action>
-    # if path is left empty, the Action's action.yml is located at the root of the repository.
     - name: Run mvn package
       shell: bash
       run: mvn package # && ls -la target
@@ -23,3 +20,29 @@ runs:
         
     - name: Run Go script
       run: go run ./create-slsa-file/main.go $(find ./target -type f -name "*.jar")
+
+
+#on:
+#  workflow_call:
+#runs:
+#  using: 'composite'
+#  steps:
+#    - name: Set up JDK 17
+#      uses: actions/setup-java@v3
+#      with:
+#        java-version: '17'
+#        distribution: 'temurin'
+#
+#    # This would call the main Action, e.g., ./../__TOOL_CHECKOUT_DIR__/<path/to/action>
+#    # if path is left empty, the Action's action.yml is located at the root of the repository.#
+#    - name: Run mvn package
+#      shell: bash
+#      run: mvn package # && ls -la target
+#      
+#    - name: Set up Go
+#      uses: actions/setup-go@v3
+#      with:
+#        go-version: '>=1.20.0'
+#        
+#    - name: Run Go script
+#      run: go run ./create-slsa-file/main.go $(find ./target -type f -name "*.jar")
