--- a/.github/workflows/create-slsa-file.yml
+++ b/.github/workflows/create-slsa-file.yml
@@ -27,7 +27,7 @@ jobs:
         go-version: '>=1.20.0'
         
     - name: Run Go script
-      run: go run ./create-slsa-file/main.go $(find ./test-java-project/target -type f -name "*.jar")
+      run: go run ./test-java-project/create-slsa-file/main.go $(find ./test-java-project/target -type f -name "*.jar")
 
 
 #on:
