--- a/.github/workflows/create-slsa-file.yml
+++ b/.github/workflows/create-slsa-file.yml
@@ -30,7 +30,7 @@ jobs:
       run: go run ./test-java-project/create-slsa-file/main.go $(find ./test-java-project/target -type f -name "*.jar")
     
     - name: Upload artifacts
-      uses: actions/upload-artifact@3
+      uses: actions/upload-artifact@v3
       with:
         path: ./target/*.jar
 
