--- a/.github/workflows/create-slsa-file.yml
+++ b/.github/workflows/create-slsa-file.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
-        path: ./target/*.jar
+        path: ./test-java-project/target/*.jar
 
 
 #on:
