--- a/builder/action.yml
+++ b/builder/action.yml
@@ -48,6 +48,9 @@ runs:
       uses: actions/setup-go@v3
       with:
         go-version: '>=1.20.0'
+    
+    - name: Find all create .jar files
+      uses: ./.github/workflows/create-slsa-output-file/action.yml@main
 
     # Here we would possibly run jreleaser
     
