--- a/builder/action.yml
+++ b/builder/action.yml
@@ -4,7 +4,7 @@ on:
 runs:
   using: 'composite'
   steps:
-    - name: Checkout private tools
+    - name: Checkout
       uses: actions/checkout@v3
     #- name: 'test'
     #  shell: bash
