--- a/builder/action.yml
+++ b/builder/action.yml
@@ -6,6 +6,8 @@ runs:
   steps:
     - name: Checkout
       uses: actions/checkout@v3
+      with:
+        path: main
     #- name: 'test'
     #  shell: bash
     #  env:
