--- a/builder/action.yml
+++ b/builder/action.yml
@@ -52,7 +52,11 @@ runs:
       uses: actions/setup-go@v3
       with:
         go-version: '>=1.20.0'
-    
+        
+    - name: Get pwd
+      id: generate-outputs
+      shell: bash
+      run: pwd
     - name: Find all create .jar files
       uses: AdamKorcz/java-slsa-generator/.github/actions/create-slsa-output-file/action.yml@main
 
