--- a/builder/action.yml
+++ b/builder/action.yml
@@ -68,6 +68,7 @@ runs:
         #echo $NUM_JAR_FILES
         COUNTER=1
         find target -type f -name "*.jar"|while read fname; do
+          echo "fname: {$fname}"
           #echo $COUNTER
           bn="$(basename -- $fname)"
           echo "basename: ${bn}"
