--- a/builder/action.yml
+++ b/builder/action.yml
@@ -73,7 +73,9 @@ runs:
         NUM_JAR_FILES=$(find target -type f -name "*jar" | wc -l)
         #echo $NUM_JAR_FILES
         COUNTER=1
-        find target -type f -name "*jar"|while read fname; do
+        #find target -type f -name "*jar"|while read fname; do
+        find target -name "*.jar" -print0 | while read -d $'\0' fname
+        do
           echo "fname: {$fname}"
           #echo $COUNTER
           bn="$(basename -- $fname)"
